--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-reanimated": "^3.16.6",
-    "react-native-sound": "^0.11.2"
+    "react-native-sound": "^0.11.2",
+    "xstate": "^4.38.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
