--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@xstate/react": "^1.6.3",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-reanimated": "^3.16.6",
