finished UI for gamescreen, pending pawn rank up implementation

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -4,6 +4,17 @@
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
 
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
+MYAPP_UPLOAD_STORE_PASSWORD=Avengers@2018
+MYAPP_UPLOAD_KEY_PASSWORD=Avengers@2018
+
+systemProp.javax.net.ssl.keyStoreType=JKS
+systemProp.javax.net.ssl.trustStoreType=JKS
+systemProp.javax.net.ssl.keyStorePassword=changeit
+systemProp.javax.net.ssl.trustStorePassword=changeit
+systemProp.http.keepAlive=false
+
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 
