--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@xstate/react": "^1.6.3",
+    "install": "^0.13.0",
+    "npm": "^10.9.2",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-reanimated": "^3.16.6",
     "react-native-sound": "^0.11.2",
+    "react-native-vector-icons": "^10.2.0",
     "xstate": "^4.38.3"
   },
   "devDependencies": {
